Fix petition link (at bottom) alignment
+ beautify index.html

--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -197,7 +197,7 @@ body {
     margin-top: -0.1em;
 }
 
-.petition-link img {
+#petition-link-main img {
     display: block;
     margin:auto;
 }
